feat: api docs for schedule endpoint
